# docs/swagger.json
@@ -209,7 +209,7 @@
         },
         "/author/{id}/books": {
             "get": {
-                "description": "GetAll page",
+                "description": "GetBooks page",
                 "consumes": [
                     "application/json"
                 ],
@@ -219,7 +219,7 @@
                 "tags": [
                     "Author"
                 ],
-                "summary": "GetAll Author",
+                "summary": "GetBooks Author",
                 "parameters": [
                     {
                         "type": "string",
@@ -231,13 +231,13 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "GetAll Successful",
+                        "description": "GetAuthorBooks Successful",
                         "schema": {
                             "$ref": "#/definitions/genprotos.AllBooks"
                         }
                     },
                     "401": {
-                        "description": "Error while GetAll",
+                        "description": "Error while GetAuthorBooks",
                         "schema": {
                             "type": "string"
                         }
@@ -610,12 +610,12 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "name": "borrow_date",
+                        "name": "borrowDate",
                         "in": "query"
                     },
                     {
                         "type": "string",
-                        "name": "return_date",
+                        "name": "returnDate",
                         "in": "query"
                     }
                 ],
@@ -883,7 +883,7 @@
         },
         "/genre/{id}/books": {
             "get": {
-                "description": "GetAll page",
+                "description": "GetBooks page",
                 "consumes": [
                     "application/json"
                 ],
@@ -893,7 +893,7 @@
                 "tags": [
                     "Genre"
                 ],
-                "summary": "GetAll Genre",
+                "summary": "GetBooks Genre",
                 "parameters": [
                     {
                         "type": "string",
@@ -905,13 +905,13 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "GetAll Successful",
+                        "description": "GetGenreBooks Successful",
                         "schema": {
                             "$ref": "#/definitions/genprotos.AllBooks"
                         }
                     },
                     "401": {
-                        "description": "Error while GetAll",
+                        "description": "Error while GetGenreBooks",
                         "schema": {
                             "type": "string"
                         }
@@ -1091,13 +1091,6 @@
                     "type": "string"
                 }
             }
-        }
-    },
-    "securityDefinitions": {
-        "BearerAuth": {
-            "type": "apiKey",
-            "name": "Authourization",
-            "in": "header"
         }
     }
 }
